# OuroborosModules

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPILING.md  CppCheckSuppressions.txt  LICENSE.md  Makefile  Mkfile_PlainMake  README.md  RackSDK.cmake  __build.sh  __build_shell.py  __project.sublime-project  plugin.json
.github/workflows/: build-plugin.yml
cmake/: utils.cmake
docs/: DesignRef.ai
docs/images/: all_modules.psd
libs/header_only_libs/: AudioFile.h  SvgHelper.hpp
license/: AudioFile.txt  RackSDK_CMake.txt  SurgeXT-HilbertTransform.txt  _Resource licenses.txt  vcv-rackthemer.md
res/themes/: BlackAndGold.json  Dark.json  Light.json
scripts/: common.py  compile_svgs.py  make_docs_images.py  screenshots_config_default.json
src/: CableHandler.cpp  CableHandler.hpp  CommonTypes.cpp  CommonTypes.hpp  Constants.cpp  Constants.hpp  JsonUtils.cpp  JsonUtils.hpp  Logging.cpp  Logging.hpp  Math.cpp  Math.hpp  MetaHandler.cpp  MetaHandler.hpp  ModelDeclarations.cpp  ModelDeclarations.hpp  ModelDeclarations.x  ModuleBase.cpp  ModuleBase.hpp  NanoSVG_Impl.cpp  PluginDef.cpp  PluginDef.hpp  PluginSettings.cpp  PluginSettings.hpp  SampleChannel.cpp  SampleChannel.hpp  Settings_Def.x  Settings_Def_Stubs.hpp  Styles_Def.x  UISystemUpdater.cpp  UISystemUpdater.hpp  Utils.cpp  Utils.hpp
src/Automata/: Automata.cpp  Automata.hpp  AutomataBoard.cpp  AutomataCommon.cpp  AutomataCommon.hpp  AutomataLife.cpp  AutomataLife.hpp  BoardWidget.cpp  EditCommands.cpp  EditCommands.hpp  RulesWidget.cpp  Widget.cpp
src/Bernoulli/: Bernoulli.cpp  (+2 more)
(+92 files in other folders)
